--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=ru">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -39,19 +39,19 @@
       </ul>
       </div>
     </section>
-    <section class="photo-grid">  
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="">
+    <section class="photo-grid" aria-label="сетка фотографий">  
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из вагона поезда">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="атарва тулси">
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="туман">
+      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="сочи">
+      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="трещины на льду">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный преход">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатские сопки">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="камчатский вулкан">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="байкал">
+      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
     </section>
      <section class="places container">   
       <div class="place">
