--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 <body class="root">
   <header class="header"> 
     <img class="header__logo" src="./images/logo/header-logo.svg" alt="логотип с картой России">
-    <div class="header__lang-container">
-      <a class="header__lang-link" href="#">Ru</a>
-      <a class="header__lang-link" href="#">En</a>
-    </div>
+    <ul class="header__lang-container">
+      <li class="header__lang-container-item"><a class="header__lang-link header__lang-link_select" href="#">Ru</a></li>
+      <li class="header__lang-container-item"><a class="header__lang-link" href="#">En</a></li>
+    </ul>
   </header>
   <main class="content"> 
    <section class="lead">  
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img class="lead__image" src="./images/lead-polka.jpg" alt="карта путешествия">
-      <p class="lead__caption">ваша полка — верхняя</p>
+      <figure class="lead__figure">
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="карта путешествия">
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
     </section>
     <section class="intro container">
       <div class="intro__container">
@@ -31,34 +33,60 @@
         которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, 
         достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li>Часовых поясов <span>11</span></li>
-        <li>Объектов природного наследия ЮНЕСКО <span>12</span></li>
-        <li>Объектов культурного наследия ЮНЕСКО <span>16</span></li>
-        <li>Природных заповедников <span>105</span></li>
-        <li>Аэропортов <span>241</span></li>  
+        <li>Часовых поясов <span class="intro__span">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__span">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span">16</span></li>
+        <li>Природных заповедников <span class="intro__span">105</span></li>
+        <li>Аэропортов <span class="intro__span">241</span></li>  
       </ul>
       </div>
     </section>
-    <section class="photo-grid" aria-label="сетка фотографий">  
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из вагона поезда">
-      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="атарва тулси">
-      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="туман">
-      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="сочи">
-      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="трещины на льду">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
-      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
-      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный преход">
-      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатские сопки">
-      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="камчатский вулкан">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="байкал">
-      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+    <section class="photo-grid" aria-label="сетка фотографий"> 
+      <ul class="photo-grid__list">
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="фото из вагона поезда">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="атарва тулси">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="туман">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="сочи">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="трещины на льду">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный преход">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатские сопки">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="камчатский вулкан">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="байкал">
+        </li>
+        <li class="photo-grid__item">
+          <img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+        </li>
+      </ul> 
     </section>
      <section class="places container">   
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Куршская коса</h2>
         <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
         <div class="place__website website">
-          <p class="website__url-heading">URL</p>
+          <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <div class="place__text">
@@ -69,12 +97,12 @@
           там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. 
           Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
         </div>
-      </div>
-      <div class="place">  
+      </article>
+      <article class="place">  
         <h2 class="place__title">Кольский</h2>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
         <div class="place__website website">
-          <p class="website__url-heading">URL</p>
+          <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
         </div>
         <div class="place__text">
@@ -85,12 +113,12 @@
           Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. 
           Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">Алтай</h2>
         <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
         <div class="place__website website">
-          <p class="website__url-heading">URL</p>
+          <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
         </div>
         <div class="place__text">
@@ -101,12 +129,12 @@
           Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, 
           а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">Зимний Байкал</h2>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
         <div class="place__website website">
-          <p class="website__url-heading">URL</p>
+          <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <div class="place__text">
@@ -115,12 +143,12 @@
         <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
           к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">Карелия</h2>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
         <div class="place__website website">
-          <p class="website__url-heading">URL</p>
+          <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
         </div>
         <div class="place__text">
@@ -128,12 +156,15 @@
           В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
           в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
-      </div>
+      </article>
     </section>
      <section class="cover">  
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <h2 class="cover__title">До&nbsp;Байкала 
+        &laquo;на&nbsp;собаках&raquo;</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      <div class="cover__overlay"></div>
+    </a>
+ 
     </section>
   </main> 
   <footer class="footer"> 
