--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="root">
   <header class="header"> 
-    <img class="header__logo" src="./images/logo/header-logo.svg" alt="логотип с картой России">
+    <img class="header__logo" src="./images/logo/header-logo.svg" alt="силуэт России с надписью Россия">
     <ul class="header__lang-container">
       <li class="header__lang-container-item"><a class="header__lang-link header__lang-link_select" href="#">Ru</a></li>
       <li class="header__lang-container-item"><a class="header__lang-link" href="#">En</a></li>
@@ -20,7 +20,7 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <figure class="lead__figure">
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="карта путешествия">
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="девушка на полке вагоне на фоне карты путешествия по России">
         <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
       </figure>
     </section>
@@ -44,47 +44,47 @@
     <section class="photo-grid" aria-label="сетка фотографий"> 
       <ul class="photo-grid__list">
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="фото из вагона поезда">
+          <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="летний пейзаж из окна вагона поезда">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="атарва тулси">
+          <img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="снежные горы с облаками">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="туман">
+          <img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="собака на стогу сена в тумане на рассвете">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="сочи">
+          <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="горный лес в тумане">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="трещины на льду">
+          <img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="трещины на льду под колесом автомобиля">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+          <img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="берег озера байкал">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+          <img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="горная гряда с вершиной Эльбрус">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный преход">
+          <img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный переход перед серыми блоками">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатские сопки">
+          <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатские сопки в тумане с высоты">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="камчатский вулкан">
+          <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="вид на камчатский вулкан">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="байкал">
+          <img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="обрыв с видом на воду внизу">
         </li>
         <li class="photo-grid__item">
-          <img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+          <img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="туман в горах">
         </li>
       </ul> 
     </section>
      <section class="places container">   
       <article class="place">
         <h2 class="place__title">Куршская коса</h2>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
+        <img class="place__image" src="./images/place-kosa.jpg" alt="пни деревьев в воде">
         <div class="place__website website">
           <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -100,7 +100,7 @@
       </article>
       <article class="place">  
         <h2 class="place__title">Кольский</h2>
-        <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
+        <img class="place__image" src="./images/place-kolsky.jpg" alt="снежная сопка">
         <div class="place__website website">
           <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -116,7 +116,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">Алтай</h2>
-        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
+        <img class="place__image" src="./images/place-altai.jpg" alt="ноутбук на фоне зеленого леса">
         <div class="place__website website">
           <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
@@ -132,7 +132,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">Зимний Байкал</h2>
-        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
+        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="трещины в прозрачном голубом льду">
         <div class="place__website website">
           <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -146,7 +146,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">Карелия</h2>
-        <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
+        <img class="place__image" src="./images/place-karelia.jpg" alt="река посреди густого леса">
         <div class="place__website website">
           <p class="website__url-heading">url</p>
           <a class="website__link" lang="en" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
