добавлен ариалейбл для place

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </li>
       </ul> 
     </section>
-     <section class="places container">   
+     <section class="places container" aria-label="статьи о наиболее интересных местах">   
       <article class="place">
         <h2 class="place__title">Куршская коса</h2>
         <img class="place__image" src="./images/place-kosa.jpg" alt="пни деревьев в воде">
